fix preview background in dark mode

--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -6,5 +6,5 @@
     border: 1px solid #dee2e6;
     padding: .375rem .75rem;
     font-size: .9375rem;
-    background-color: #f5f5f5;
+    background-color: var(--bs-secondary-bg);
 }
